<resources>
    <string name="app_name">Proekt Mpip</string>
    <string name="intro_first_line">Најлесно shopping решение</string>
    <string name="intro_second_line">Сега пазарувањето е во ваши раце!</string>
    <string name="btn_login">Најава на корисник</string>
    <string name="btn_user_signup">Нов корисник? Регистрирај се!</string>
    <string name="enter_email">Внеси емаил</string>
    <string name="enter_password">Внеси лозинка</string>
    <string name="user_login">Најава на корисник</string>
    <string name="registration_message">Регистрација на нов корисник</string>
    <string name="first_name">Име</string>
    <string name="last_name">Презиме</string>
    <string name="email_address">Емаил</string>
    <string name="password">Лозинка</string>
    <string name="confirm_password">Потврди лозинка</string>
    <string name="contact_number">Телефон за контакт</string>
    <string name="btn_register">Регистрирај се</string>
    <string name="popular_products">Продукти</string>
    <string name="choise_image">Избери слика</string>
    <string name="upload">Додај продукт   </string>
    <string name="product_title">Внеси име на продуктот</string>
    <string name="product_price">Внеси цена на продуктот</string>


</resources>
