<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenbg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/shop_logo"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_first_line"
            android:textSize="22sp"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:layout_marginTop="70sp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_second_line"
            android:textSize="20sp"
            android:textColor="@color/colorRed"
            android:textAlignment="center"
            android:textAllCaps="true"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnloginbg"
            android:layout_marginTop="70sp"
            android:text="@string/btn_login"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:id="@+id/btnUserLogin"
            />

        <Button
            android:id="@+id/btnUserSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btnsignupbg"
            android:layout_marginTop="20sp"
            android:textSize="18sp"
            android:text="@string/btn_user_signup"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>



</LinearLayout>